fixed spacing issues

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,5 +1,6 @@
 body {
-	height: 100%;
+	height: 1200px;
+	width: 100%;
 }
 
 #bg-img{
@@ -10,12 +11,13 @@ body {
     -moz-background-size: cover;
     -o-background-size: cover;
     height: 100%;
+    width: auto;
 }
 
 .styled{
-	margin-top: 6%;
-	margin-left: 38.75%;
-	max-width: 22%;
+	margin-top: 2%;
+	margin-left: 41.20%;
+	max-width: 17%;
 }
 
 .push{
